package eu.telecomnancy.labfx;

import java.sql.Date;
import java.util.ArrayList;

public class Calendrier {
    private User user;
    private Date mainDate;
    private ArrayList<Ressource> activites;

}
