package eu.telecomnancy.labfx;

public class Florain {
    private int florain;
    public Florain(int florain){
        this.florain = florain;
    }
    public int getFlorain(){
        return this.florain;
    }
    public void setFlorain(int florain){
        this.florain = florain;
    }
    public void addFlorain(int florain){
        this.florain += florain;
    }
}
