package eu.telecomnancy.labfx;

public enum ModeAffichage {
    Jour,Semaine,Mois;
}
