package eu.telecomnancy.labfx;

public enum Recurrence {
    Non, Quotidien, Hebdomadaire, Mensuel;
}
