package eu.telecomnancy.labfx;

import java.sql.Date;

public class Ressource {
    private String name;
    private String description;
    private Date dateDebut;
    private Date dateFin;
    private double longitude;
    private double latitude;
    private int id;
    private Florain prix;
    private Recurrence reccurence;
    private User owner;
}
